--- a/src/pages/FarmerDashboard/FarmerDashboard.module.css
+++ b/src/pages/FarmerDashboard/FarmerDashboard.module.css
@@ -3,8 +3,27 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* background-image: linear-gradient(#ffffff, #c9faf7); */
-
+    background-image: linear-gradient(#66D2CC, #3062F3);
+}
+.secondContainer{
+    margin: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
+    padding: 0.8rem 1.8rem;
+    background-color: #ffffff;
+    border: none;
+    outline: none;
+    border-radius: 0.4rem;
+    font-size: 1.1rem;
+    font-weight: bold;
+    color: #1C5253;
+    transition: all 0.5s ease;
+    box-shadow: 0px 1px 8px #000000;
+    width: 90%;
+    /* opacity: 0.8; */
+    /* filter: blur(8px); */
 }
 .mainHeading{
     font-family: 'Prosto One', cursive;
@@ -17,7 +36,7 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    border-top: 1px solid #98b2ff;
+    /* border-top: 1px solid #98b2ff; */
 }
 .button, .button2{
     margin: 5rem;
@@ -35,7 +54,10 @@
     transition: all 0.5s ease;
     box-shadow: 0px 1px 10px #12196c;
 }
-
+.headFarm, .headInsurance{
+    font-size: 1.3rem;
+    font-weight: bold;
+}
 .button:hover{
     background-image: linear-gradient(#3062F3, #090446);
     transform: scale(1.02);
@@ -55,7 +77,9 @@
     justify-content: space-between;
     margin: 15px 35px;
     padding: 20px 0px;
-    border-bottom: 1px solid #98b2ff;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+    /* border-bottom: 1px solid #98b2ff; */
 }
 .farmsHead, .insuranceHead{
     font-family: 'Chivo Mono', monospace;    
@@ -69,8 +93,8 @@
 }
 .farmsCards, .insuranceCards{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(175px, 450px));;
-    column-gap: 5rem;
+    grid-template-columns: repeat(auto-fill, minmax(175px, 405px));;
+    column-gap: 4rem;
     row-gap: 5rem;
     margin: 2.5rem;
 }
@@ -88,7 +112,7 @@
     font-weight: bold;
     color: #1C5253;
     transition: all 0.5s ease;
-    box-shadow: 0px 1px 5px #000000;
+    box-shadow: 0px 1px 5px #d0d0d0;
 }
 .farm:hover, .insurance:hover{
     transform: scale(1.01);
@@ -100,4 +124,14 @@
     padding: 20px 0px 0px 0px;
     margin: 5px;
     width: 100%;
+}
+.shadow{
+    width: 90%;
+    margin: auto;
+    height: 1px;
+    box-shadow: 0px 1px 5px #d0d0d0;
+}
+.values{
+    margin: 0px 10px;
+    color: #15227d;
 }
