--- a/src/pages/InsuranceList/InsuranceList.module.css
+++ b/src/pages/InsuranceList/InsuranceList.module.css
@@ -3,6 +3,27 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-image: linear-gradient(#66D2CC, #3062F3);
+}
+.secondContainer{
+    margin: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
+    padding: 0.8rem 1.8rem;
+    background-color: #ffffff;
+    border: none;
+    outline: none;
+    border-radius: 0.4rem;
+    font-size: 1.1rem;
+    font-weight: bold;
+    color: #1C5253;
+    transition: all 0.5s ease;
+    box-shadow: 0px 1px 8px #000000;
+    width: 90%;
+    /* opacity: 0.8; */
+    /* filter: blur(8px); */
 }
 .insuranceHead{
     font-family: 'Prosto One', cursive;
@@ -23,7 +44,12 @@
     margin: 15px 5px;
     padding: 20px 0px;
     color: #3062F3;
-    border-bottom: 1px solid #98b2ff;
+    /* border-bottom: 1px solid #98b2ff; */
+}
+.shadow{
+    width: 100%;
+    height: 1px;
+    box-shadow: 0px 1px 5px #9d9c9c;
 }
 .insuranceBox{
     display: flex;
@@ -32,8 +58,8 @@
 }
 .insuranceCards{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(175px, 450px));;
-    column-gap: 5rem;
+    grid-template-columns: repeat(auto-fill, minmax(175px, 400px));;
+    column-gap: 4rem;
     row-gap: 5rem;
     margin: 2.5rem;
 }
@@ -51,7 +77,7 @@
     font-weight: bold;
     color: #1C5253;
     transition: all 0.5s ease;
-    box-shadow: 0px 1px 5px #000000;
+    box-shadow: 0px 1px 5px #d0d0d0;
 }
 .insurance:hover{
     transform: scale(1.01);
@@ -64,5 +90,32 @@
     margin: 5px;
     width: 100%;
 }
+.button, .button2{
+    margin: 1rem;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    padding: 0.8rem 1.8rem;
+    background-image: linear-gradient(#66D2CC, #3062F3);
+    border: none;
+    outline: none;
+    border-radius: 0.4rem;
+    font-size: 1.1rem;
+    font-weight: bold;
+    color: white;
+    transition: all 0.5s ease;
+    box-shadow: 0px 1px 10px #12196c;
+}
 
-
+.button:hover{
+    background-image: linear-gradient(#3062F3, #090446);
+    transform: scale(1.02);
+}
+.headInsurance{
+    font-size: 1.3rem;
+    font-weight: bold;
+}
+.values{
+    margin: 0px 10px;
+    color: #15227d;
+}
