--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Alkatra&family=Chivo+Mono:wght@600&family=Fira+Sans:ital,wght@0,400;1,500&family=Lobster&family=Playfair+Display:ital,wght@1,700&family=Poppins:wght@600&family=Prosto+One&family=Solway&display=swap');
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
