--- a/src/pages/CompanyDashboard/CompanyDashboard.module.css
+++ b/src/pages/CompanyDashboard/CompanyDashboard.module.css
@@ -186,10 +186,19 @@
     box-shadow: 0px 1px 5px black;
 }
 .modalInput{
-    padding: 6px 1px;
-    margin: 10px;
+    padding: 6px 0px;
+    margin: 16px 0px;
 }
-
+.formBox {
+	padding: 40px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	transition: 0.5s;
+    position: relative;
+    z-index: 0;
+}
 
 .registerBtn, .submitButton, .submitOtpButton{
     margin: auto;
