--- a/src/pages/MainPage/MainPage.module.css
+++ b/src/pages/MainPage/MainPage.module.css
@@ -6,18 +6,24 @@
     min-height: 100vh;
     align-items: center;
     background-image: linear-gradient(#66D2CC, #3062F3);
+    background-image: url('../../images/farming-banner1.jpeg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     text-align: center;
 }
 .mainHeading{
     font-family: 'Poppins', sans-serif;
+    font-size: 2.5rem;
+    font-weight: 500;
     margin: 50px 10px;
-    padding-top: 50px;
-    color: #085152;
+    padding-top: 100px;
+    color: #044918;
 }
 .secondaryHeading{
     font-family: 'Lobster', cursive;
     color: rgb(213, 241, 255);
-    font-weight: 500;
+    font-weight: 100;
     font-size: 1.7rem;
     padding: 15px;
 }
@@ -43,33 +49,35 @@
     width: 15rem;
     padding: 7px 7px;
     outline: none;
-    box-shadow: 0px 5px 10px 1px #15227d;
+    /* box-shadow: 0px 1px 1px 1px #085152; */
     margin: 0.1rem;
     font-size: 1em;
     background-color: transparent;
-    border-radius: 30px;
+    border-radius: 10px;
     cursor: pointer;
     color: white;
 }
 .registerBtn, .submitButton{
-    margin-top: 1rem;
+    margin-top: 1.3rem;
     display: flex;
     align-items: center;
     cursor: pointer;
     padding: 0.8rem 1.8rem;
-    background-image: linear-gradient(#3062F3, #090446);
+    background-color:#044918;
     border: none;
-    outline: none;
+    outline: 1px solid #044918;
     border-radius: 0.4rem;
     font-size: 1.1rem;
     font-weight: bold;
     color: white;
     transition: all 0.5s ease;
-    box-shadow: 0px 1px 5px #12196c;
+    box-shadow: 0px 1px 5px #044918;
 }
 
 .registerBtn:hover, .submitButton:hover{
-    background-image: linear-gradient(#3062F3, #090446);
+    background: white;
+    color: #044918;
+    border: 1px solid #044918;
     transform: scale(1.02);
 }
 
@@ -77,3 +85,9 @@ select option{
     font-family: inherit;
     color: black;
 }
+
+.input:hover{
+    transform: scale(1.03);
+}
+
+/* Writing the media queries */
