--- a/src/pages/RegisterFarmer/RegisterFarmer.module.css
+++ b/src/pages/RegisterFarmer/RegisterFarmer.module.css
@@ -4,12 +4,17 @@
     width: 100%;
     background-image: url('../../images/farmers1.jpg');
     background-size: cover;
-    filter: blur(8px);
+    /* filter: blur(8px);
     -webkit-filter: blur(8px);
-    z-index: 0;
+    z-index: 0; */
 }
-.formBox {
-	padding: 40px;
+.paper{
+    background: #FAFAFA;
+    border-radius: 10px;
+}
+
+.formBox ,.paper{
+	padding: 20px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -24,7 +29,7 @@
 	text-align: center;
 	width: 100%;
 	color: #1C5253;
-	margin-bottom: 20px;
+	/* margin-bottom: 20px; */
 }
 
 .header {
@@ -33,7 +38,7 @@
 	text-align: center;
 	width: 100%;
     color: #231123;
-	margin-bottom: 20px;
+	/* margin-bottom: 10px; */
 }
 
 .inputContainer, .inputContainer2 {
@@ -47,27 +52,31 @@
 }
 
 .inputLabel {
-    font-size: 1.1rem;
-    color: #090446;
-    font-weight: 600;
-    padding: 20px 0px 0px 0px;
+    font-size: 1rem;
+    color: #1e1d27;
+    font-weight: 400;
+    padding: 10px 0px 0px 0px;
     margin: 5px;
     width: 100%;
 }
 
 .input, .modalInput {
     width: 100%;
-    padding: 12px 12px;
+    padding: 10px 2px;
     outline: none;
     border: 1px white solid;
     margin: 0.1rem;
-    font-size: 1.1rem;
+    font-size: 1rem;
     background-color: #FAFAFA;
-    border-radius: 0.4rem;
-    box-shadow: 0px 1px 5px black;
+    /* border-radius: 0.4rem; */
+    /* box-shadow: 0px 1px 5px black; */
 }
 .modalInput{
     padding: 6px 1px;
+}
+
+.input{
+    border-bottom: 1px solid #dbd7d7;
 }
 
 
@@ -78,19 +87,23 @@
     align-items: center;
     cursor: pointer;
     padding: 0.8rem 1.8rem;
-    background-image: linear-gradient(#3062F3, #090446);
+    background-color:#044918;
     border: none;
-    outline: none;
+    outline: 1px solid #044918;
     border-radius: 0.4rem;
     font-size: 1.1rem;
     font-weight: bold;
     color: white;
     transition: all 0.5s ease;
-    box-shadow: 0px 1px 10px #12196c;
+    box-shadow: 0px 1px 10px #044918;
 }
 
+
+
 .registerBtn:hover, .submitButton:hover, .submitOtpButton:hover{
-    background-image: linear-gradient(#3062F3, #090446);
+    background: white;
+    color: #044918;
+    border: 1px solid #044918;
     transform: scale(1.02);
 }
 
@@ -101,17 +114,23 @@
 .verifyButton{
     margin: auto;
     margin-left: 3rem;
-    margin-right: -1.6rem;
+    /* margin-right: -1.6rem; */
     margin-bottom: 0rem;
     display: flex;
     align-items: center;
     cursor: pointer;
     padding: 0.8rem 1.8rem;
     border: none;
-    outline: none;
+    outline: 1px solid #044918;
     border-radius: 0.4rem;
+
 }
 
+.verifyButton:hover{
+    background-color: #dc7805;
+    color:white;
+    outline: none;
+}
 .loader{
     align-self: center;
 }
