--- a/src/pages/Insurance/Insurance.module.css
+++ b/src/pages/Insurance/Insurance.module.css
@@ -85,3 +85,24 @@
     background-image: linear-gradient(#3062F3, #090446);
     transform: scale(1.02);
 }
+.selectOptions{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.inputContainer, .inputContainer2 {
+    display: flex;
+    flex-direction: column;
+    width: 330px;
+}
+.input{
+    width: 79%;
+    padding: 12px 12px;
+    outline: none;
+    border: 1px white solid;
+    margin: 20px auto;
+    font-size: 1.1rem;
+    background-color: #FAFAFA;
+    border-radius: 0.4rem;
+    box-shadow: 0px 1px 5px black;
+}
