--- a/src/pages/AddFarm/AddFarm.module.css
+++ b/src/pages/AddFarm/AddFarm.module.css
@@ -5,16 +5,17 @@
     align-items: center;
     min-height: 100vh;
     align-items: center;
-    background-image: linear-gradient(#66D2CC, #3062F3);
+    background-image: url("../../images/farming-banner.jpg");
     text-align: center;
+    background-size: cover;
 }
 .secondContainer{
-    margin: 2rem 20rem;
+    margin: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     cursor: pointer;
-    padding: 0.8rem 1.8rem;
+    padding: 0.8rem 1.4rem;
     background-color: #ffffff;
     border: none;
     outline: none;
@@ -28,7 +29,7 @@
     /* filter: blur(8px); */
 }
 .formBox {
-	padding: 40px;
+	padding: 20px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -42,8 +43,8 @@
 	font-weight: 700;
 	text-align: center;
 	width: 100%;
-	color: #1C5253;
-	margin-bottom: 20px;
+	color: #044918;
+	/* margin-bottom: 20px; */
 }
 
 .header {
@@ -52,7 +53,7 @@
 	text-align: center;
 	width: 100%;
     color: #231123;
-	margin-bottom: 20px;
+	/* margin-bottom: 20px; */
 }
 
 .inputContainer, .inputContainer2 {
@@ -67,18 +68,20 @@
     margin: 0.1rem;
     font-size: 1.1rem;
     border-radius: 0.4rem;
-    box-shadow: 0px 1px 5px black;
+    /* box-shadow: 0px 1px 5px black; */
 }
-
+.fileUploadContainer:hover {
+    background-color: #dc7805;
+}
 .inputContainer2{
     flex-direction: row;
 }
 
 .inputLabel {
-    font-size: 1.1rem;
-    color: #090446;
-    font-weight: 600;
-    padding: 20px 0px 0px 0px;
+    font-size: 1rem;
+    color: #1e1d27;
+    font-weight: 400;
+    padding: 10px 0px 0px 0px;
     margin: 5px;
     width: 100%;
     text-align: left;
@@ -86,14 +89,15 @@
 
 .input, .modalInput {
     width: 100%;
-    padding: 12px 12px;
+    padding: 10px 2px;
     outline: none;
     border: 1px white solid;
     margin: 0.1rem;
-    font-size: 1.1rem;
+    font-size: 1rem;
     background-color: #FAFAFA;
-    border-radius: 0.4rem;
-    box-shadow: 0px 1px 5px black;
+    border-bottom: 1px solid #dbd7d7;
+    /* border-radius: 0.4rem; */
+    /* box-shadow: 0px 1px 5px black; */
 }
 .modalInput{
     padding: 6px 1px;
@@ -107,19 +111,21 @@
     align-items: center;
     cursor: pointer;
     padding: 0.8rem 1.8rem;
-    background-image: linear-gradient(#3062F3, #090446);
+    background-color:#044918;
     border: none;
-    outline: none;
+    outline: 1px solid #044918;
     border-radius: 0.4rem;
     font-size: 1.1rem;
     font-weight: bold;
     color: white;
     transition: all 0.5s ease;
-    box-shadow: 0px 1px 10px #12196c;
+    box-shadow: 0px 1px 10px #044918;
 }
 
 .registerBtn:hover, .submitButton:hover, .submitOtpButton:hover{
-    background-image: linear-gradient(#3062F3, #090446);
+    background: white;
+    color: #044918;
+    border: 1px solid #044918;
     transform: scale(1.02);
 }
 
@@ -187,13 +193,13 @@
 .chooseFileBtn{
     width: 100%;
     padding: 0.8rem 0.6rem;
-    border-radius: 0.5rem;
-    background-color: #FAFAFA;
+    /* border-radius: 0.5rem; */
+    background-color: #848280;
     outline: none;
     border: none;
     cursor: pointer;
     margin: 0.1rem;
-    color: rgb(45, 45, 45);
+    color: white;
     font-weight: bold;
     display: flex;
     justify-content: center;
@@ -201,4 +207,8 @@
 
 .chooseFileInput{
     display: none;
+}
+
+.chooseFileBtn:hover{
+    background-color: #dc7805;
 }
