--- a/src/pages/ApplyInsurance/ApplyInsurance.module.css
+++ b/src/pages/ApplyInsurance/ApplyInsurance.module.css
@@ -5,16 +5,19 @@
     align-items: center;
     min-height: 100vh;
     align-items: center;
-    background-image: linear-gradient(#66D2CC, #3062F3);
+    background-image: url('../../images/insurance.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     text-align: center;
 }
 .secondContainer{
-    margin: 2rem;
+    margin: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     cursor: pointer;
-    padding: 0.8rem 1.8rem;
+    padding: 0.8rem 1.4rem;
     background-color: #ffffff;
     border: none;
     outline: none;
@@ -43,16 +46,16 @@
 	text-align: center;
 	width: 100%;
 	color: #1C5253;
-	margin-bottom: 20px;
+	/* margin-bottom: 20px; */
 }
 
 .header {
-	font-size: 1.4rem;
+	font-size: 0.8rem;
 	text-align: center;
     font-family: 'Alkatra', cursive;
     width: 100%;
     color: #231123;
-	margin-bottom: 20px;
+	/* margin-bottom: 20px; */
 }
 
 .inputContainer, .inputContainer2 {
@@ -75,25 +78,26 @@
 }
 
 .inputLabel {
-    font-size: 1.1rem;
+    font-size: 1rem;
     color: #090446;
-    font-weight: 600;
-    padding: 20px 0px 0px 0px;
+    font-weight: 400;
+    padding: 10px 0px 0px 0px;
     margin: 5px;
     width: 100%;
-    text-align: left;
+    /* text-align: left; */
 }
 
 .input, .modalInput {
     width: 100%;
-    padding: 12px 12px;
+    padding: 10px 12px;
     outline: none;
     border: 1px white solid;
     margin: 0.1rem;
-    font-size: 1.1rem;
+    font-size: 1rem;
     background-color: #FAFAFA;
-    border-radius: 0.4rem;
-    box-shadow: 0px 1px 5px black;
+    border-bottom: 1px solid #dbd7d7;
+    /* border-radius: 0.4rem; */
+    /* box-shadow: 0px 1px 5px black; */
 }
 .modalInput{
     padding: 6px 1px;
@@ -107,19 +111,21 @@
     align-items: center;
     cursor: pointer;
     padding: 0.8rem 1.8rem;
-    background-image: linear-gradient(#3062F3, #090446);
+    background-color:#044918;
     border: none;
-    outline: none;
+    outline: 1px solid #044918;
     border-radius: 0.4rem;
     font-size: 1.1rem;
     font-weight: bold;
     color: white;
     transition: all 0.5s ease;
-    box-shadow: 0px 1px 10px #12196c;
+    box-shadow: 0px 1px 5px #044918;
 }
 
 .registerBtn:hover, .submitButton:hover, .submitOtpButton:hover{
-    background-image: linear-gradient(#3062F3, #090446);
+    background: white;
+    color: #044918;
+    border: 1px solid #044918;
     transform: scale(1.02);
 }
 
