--- a/src/pages/Insurance/Insurance.module.css
+++ b/src/pages/Insurance/Insurance.module.css
@@ -1,15 +1,18 @@
 .mainContainer{
-    width: 100%;
+    /* width: 100%; */
     display: flex;
     flex-direction: column;
     align-items: center;
     min-height: 100vh;
     align-items: center;
-    background-image: linear-gradient(#66D2CC, #3062F3);
+    background-image: url('../../images/insurance.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     text-align: center;
 }
 .secondContainer{
-    margin: 2rem 20rem;
+    margin: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -68,9 +71,9 @@
     align-items: center;
     cursor: pointer;
     padding: 0.8rem 1.8rem;
-    background-image: linear-gradient(#66D2CC, #3062F3);
+    background-color:#044918;
     border: none;
-    outline: none;
+    outline: 1px solid #044918;
     border-radius: 0.4rem;
     font-size: 1.1rem;
     font-weight: bold;
@@ -82,7 +85,10 @@
 }
 
 .registerBtn:hover, .submitButton:hover{
-    background-image: linear-gradient(#3062F3, #090446);
+    background: #044918;
+    outline: 1px solid #044918;
+    color: white;
+    border: 1px solid #044918;
     transform: scale(1.02);
 }
 .selectOptions{
@@ -104,5 +110,5 @@
     font-size: 1.1rem;
     background-color: #FAFAFA;
     border-radius: 0.4rem;
-    box-shadow: 0px 1px 5px black;
+    /* box-shadow: 0px 1px 5px black; */
 }
